// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIForm container should render form 1`] = `
Object {
  "initialState": Object {
    "errors": Object {},
    "jsonSchema": Object {
      "properties": Object {
        "check": Object {},
        "firstname": Object {
          "type": "string",
        },
        "lastname": Object {
          "minLength": 10,
          "type": "string",
        },
      },
      "required": Array [
        "firstname",
      ],
      "title": "Comment",
      "type": "object",
    },
    "properties": Object {},
    "uiSchema": Array [
      Object {
        "autoFocus": true,
        "description": "Hint: this is the last name",
        "key": "lastname",
        "title": "Last Name (with description)",
      },
      Object {
        "key": "firstname",
        "placeholder": "Enter your firstname here",
        "title": "First Name (with placeholder)",
        "triggers": Array [
          "after",
        ],
      },
      Object {
        "key": "check",
        "title": "Check the thing",
        "triggers": Array [
          "after",
        ],
        "widget": "button",
      },
    ],
  },
  "liveState": Object {
    "errors": Object {},
    "jsonSchema": Object {
      "properties": Object {
        "check": Object {},
        "firstname": Object {
          "type": "string",
        },
        "lastname": Object {
          "minLength": 10,
          "type": "string",
        },
      },
      "required": Array [
        "firstname",
      ],
      "title": "Comment",
      "type": "object",
    },
    "properties": Object {},
    "uiSchema": Array [
      Object {
        "autoFocus": true,
        "description": "Hint: this is the last name",
        "key": "lastname",
        "title": "Last Name (with description)",
      },
      Object {
        "key": "firstname",
        "placeholder": "Enter your firstname here",
        "title": "First Name (with placeholder)",
        "triggers": Array [
          "after",
        ],
      },
      Object {
        "key": "check",
        "title": "Check the thing",
        "triggers": Array [
          "after",
        ],
        "widget": "button",
      },
    ],
  },
}
`;

exports[`UIForm container should render form 2`] = `
<withI18nextTranslation(TalendUIForm)
  autoComplete="off"
  buttonBlockClass="form-actions"
  className="my-form-class"
  customValidation={[MockFunction]}
  errors={Object {}}
  formName="myFormName"
  id="myFormId"
  jsonSchema={
    Object {
      "properties": Object {
        "check": Object {},
        "firstname": Object {
          "type": "string",
        },
        "lastname": Object {
          "minLength": 10,
          "type": "string",
        },
      },
      "required": Array [
        "firstname",
      ],
      "title": "Comment",
      "type": "object",
    }
  }
  noHtml5Validate={true}
  onChange={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
  onTrigger={[Function]}
  properties={Object {}}
  setErrors={[Function]}
  uiSchema={
    Array [
      Object {
        "autoFocus": true,
        "description": "Hint: this is the last name",
        "key": "lastname",
        "title": "Last Name (with description)",
      },
      Object {
        "key": "firstname",
        "placeholder": "Enter your firstname here",
        "title": "First Name (with placeholder)",
        "triggers": Array [
          "after",
        ],
      },
      Object {
        "key": "check",
        "title": "Check the thing",
        "triggers": Array [
          "after",
        ],
        "widget": "button",
      },
    ]
  }
  widgets={
    Object {
      "custom": [Function],
    }
  }
/>
`;
